--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   firebase_core: ^1.17.1
   firebase_auth: ^3.3.19
   google_sign_in: ^5.3.2
+  get_it: ^7.2.0
+  injectable: ^1.5.3
 
 dev_dependencies:
   flutter_test:
@@ -27,6 +29,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.1.11
   freezed: ^2.0.3+1
+  injectable_generator: ^1.5.3
 
 flutter:
   uses-material-design: true
