--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   get_it: ^7.2.0
   injectable: ^1.5.3
   another_flushbar: ^1.10.29
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
