--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   injectable: ^1.5.3
   another_flushbar: ^1.10.29
   uuid: ^3.0.6
+  auto_route: ^4.0.1
 
 dev_dependencies:
   flutter_test:
@@ -32,6 +33,7 @@ dev_dependencies:
   build_runner: ^2.1.11
   freezed: ^2.0.3+1
   injectable_generator: ^1.5.3
+  auto_route_generator: ^4.0.0
 
 flutter:
   uses-material-design: true
