--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_bloc: ^8.0.1
   firebase_core: ^1.17.1
   firebase_auth: ^3.3.19
+  cloud_firestore: ^3.1.18
   google_sign_in: ^5.3.2
   get_it: ^7.2.0
   injectable: ^1.5.3
@@ -25,6 +26,7 @@ dependencies:
   uuid: ^3.0.6
   auto_route: ^4.0.1
   kt_dart: ^0.10.0
+  json_annotation: ^4.5.0
 
 dev_dependencies:
   flutter_test:
@@ -35,6 +37,7 @@ dev_dependencies:
   freezed: ^2.0.3+1
   injectable_generator: ^1.5.3
   auto_route_generator: ^4.0.0
+  json_serializable: ^6.2.0
 
 flutter:
   uses-material-design: true
